--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^3.7.0",
+    "resend": "^6.9.2",
     "vite": "^6.2.0"
   },
   "devDependencies": {
